<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/calculator_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/padding_left"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@dimen/values_size"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/calculator_values"
        android:id="@+id/values"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/values_size"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/calculator_result"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/result"/>

    <TextView
        android:text="@string/calculator_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"/>

    <TextView
        android:text="@string/calculator_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"/>
</LinearLayout>