<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/count_label"
        android:layout_width="wrap_content"
        android:textSize="40sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/count_result"/>

    <Button
        android:id="@+id/count_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_label"
        android:layout_centerHorizontal="true"
        android:text="@string/count_btt_inc"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_button"
        android:layout_centerHorizontal="true"
        android:text="@string/count_btt_reset"/>

    <Button
        android:text="calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculator_button"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
